--- a/Prosjekt_10/assingment 10.ipynb
+++ b/Prosjekt_10/assingment 10.ipynb
@@ -2,31 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 47,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "p8dTuYvolR4l",
-        "outputId": "be46ea5f-73a9-46e0-d4b1-25e3c0327060"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ],
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -39,7 +15,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "GPU is available and will be used.\n"
+            "No GPU found. Running on CPU.\n"
           ]
         }
       ],
@@ -63,7 +39,7 @@
         "    print(\"No GPU found. Running on CPU.\")\n",
         "\n",
         "def load_data() -> Dict[str, Union[List[Any], int]]:\n",
-        "    path = \"/content/drive/MyDrive/Colab Notebooks/NTNU-div/keras-data.pickle\"\n",
+        "    path = \"keras-data.pickle\"\n",
         "    with open(file=path, mode=\"rb\") as file:\n",
         "        data = pickle.load(file)\n",
         "    return data\n",
@@ -131,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -158,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -171,15 +147,29 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "3. Training feedforward neural network...\n",
+            "3. Training feedforward neural network...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\chris\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\core\\embedding.py:90: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "Epoch 1/3\n",
-            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m48s\u001b[0m 4ms/step - accuracy: 0.8471 - loss: 0.3444 - val_accuracy: 0.8878 - val_loss: 0.2615\n",
+            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m403s\u001b[0m 41ms/step - accuracy: 0.8440 - loss: 0.3452 - val_accuracy: 0.8792 - val_loss: 0.2740\n",
             "Epoch 2/3\n",
-            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m39s\u001b[0m 4ms/step - accuracy: 0.8888 - loss: 0.2609 - val_accuracy: 0.8958 - val_loss: 0.2430\n",
+            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m390s\u001b[0m 40ms/step - accuracy: 0.8899 - loss: 0.2603 - val_accuracy: 0.8945 - val_loss: 0.2471\n",
             "Epoch 3/3\n",
-            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 4ms/step - accuracy: 0.9047 - loss: 0.2284 - val_accuracy: 0.8965 - val_loss: 0.2435\n",
+            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m409s\u001b[0m 42ms/step - accuracy: 0.9065 - loss: 0.2266 - val_accuracy: 0.8959 - val_loss: 0.2456\n",
             "Model: Feedforward NN.\n",
-            "Test accuracy: 0.894\n"
+            "Test accuracy: 0.893\n"
           ]
         }
       ],
@@ -192,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -206,9 +196,9 @@
           "output_type": "stream",
           "text": [
             "4. Training recurrent neural network...\n",
-            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m81s\u001b[0m 8ms/step - accuracy: 0.8835 - loss: 0.2736 - val_accuracy: 0.9246 - val_loss: 0.1823\n",
+            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m345s\u001b[0m 35ms/step - accuracy: 0.8824 - loss: 0.2750 - val_accuracy: 0.9254 - val_loss: 0.1851\n",
             "Model: Recurrent NN.\n",
-            "Test accuracy: 0.922\n"
+            "Test accuracy: 0.924\n"
           ]
         }
       ],
@@ -231,7 +221,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.1"
     }
   },
   "nbformat": 4,
