--- a/Prosjekt_10/assingment 10.ipynb
+++ b/Prosjekt_10/assingment 10.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -107,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -134,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -147,29 +147,15 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "3. Training feedforward neural network...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\chris\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\core\\embedding.py:90: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
+            "3. Training feedforward neural network...\n",
             "Epoch 1/3\n",
-            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m403s\u001b[0m 41ms/step - accuracy: 0.8440 - loss: 0.3452 - val_accuracy: 0.8792 - val_loss: 0.2740\n",
+            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m442s\u001b[0m 45ms/step - accuracy: 0.8448 - loss: 0.3455 - val_accuracy: 0.8881 - val_loss: 0.2604\n",
             "Epoch 2/3\n",
-            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m390s\u001b[0m 40ms/step - accuracy: 0.8899 - loss: 0.2603 - val_accuracy: 0.8945 - val_loss: 0.2471\n",
+            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m376s\u001b[0m 38ms/step - accuracy: 0.8893 - loss: 0.2611 - val_accuracy: 0.8958 - val_loss: 0.2464\n",
             "Epoch 3/3\n",
-            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m409s\u001b[0m 42ms/step - accuracy: 0.9065 - loss: 0.2266 - val_accuracy: 0.8959 - val_loss: 0.2456\n",
+            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m358s\u001b[0m 36ms/step - accuracy: 0.9052 - loss: 0.2274 - val_accuracy: 0.8963 - val_loss: 0.2482\n",
             "Model: Feedforward NN.\n",
-            "Test accuracy: 0.893\n"
+            "Test accuracy: 0.895\n"
           ]
         }
       ],
@@ -182,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -196,9 +182,9 @@
           "output_type": "stream",
           "text": [
             "4. Training recurrent neural network...\n",
-            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m345s\u001b[0m 35ms/step - accuracy: 0.8824 - loss: 0.2750 - val_accuracy: 0.9254 - val_loss: 0.1851\n",
+            "\u001b[1m9827/9827\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m359s\u001b[0m 36ms/step - accuracy: 0.8819 - loss: 0.2753 - val_accuracy: 0.9231 - val_loss: 0.1875\n",
             "Model: Recurrent NN.\n",
-            "Test accuracy: 0.924\n"
+            "Test accuracy: 0.922\n"
           ]
         }
       ],
